一括コミット

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>📚 CheckMate v2</title>
+<title>CheckMate</title>
 
 <!-- SEO and Social Sharing Meta Tags -->
 <meta name="description" content="日々の持ち物を管理し、忘れ物を防止するためのチェックリストPWAです。曜日ごとのアイテム登録やPWA対応で、あなたの「うっかり」をなくします。">
@@ -11,7 +11,7 @@
 <meta property="og:type" content="website">
 <!-- TODO: Replace with the final, absolute URL of your deployed app -->
 <meta property="og:url" content="https://vol-11.github.io/CheckMate-V2/">
-<meta property="og:title" content="📚 CheckMate V2">
+<meta property="og:title" content="CheckMate">
 <meta property="og:description" content="日々の持ち物を管理し、忘れ物を防止するためのチェックリストPWAです。曜日ごとのアイテム登録やPWA対応で、あなたの「うっかり」をなくします。">
 <!-- TODO: Replace with the final, absolute URL to your icon image -->
 <meta property="og:image" content="https://vol-11.github.io/CheckMate-V2/icons/icon-48.png">
@@ -19,7 +19,7 @@
 <meta property="twitter:card" content="https://vol-11.github.io/CheckMate-V2/icons/icon-512.png">
 <!-- TODO: Replace with the final, absolute URL of your deployed app -->
 <meta property="twitter:url" content="https://vol-11.github.io/CheckMate-V2/">
-<meta property="twitter:title" content="📚 CheckMate V2">
+<meta property="twitter:title" content="CheckMate">
 <meta property="twitter:description" content="日々の持ち物を管理し、忘れ物を防止するためのチェックリストPWAです。曜日ごとのアイテム登録やPWA対応で、あなたの「うっかり」をなくします。">
 <!-- TODO: Replace with the final, absolute URL to your icon image -->
 <meta property="twitter:image" content="https://vol-11.github.io/CheckMate-V2/icons/icon-48.png">
@@ -60,7 +60,7 @@
 
 <!-- ヘッダー -->
 <header class="relative bg-gradient-to-r from-blue-600 to-blue-700 dark:from-blue-700 dark:to-blue-800 text-white p-4 sm:p-6 rounded-xl text-center mb-4 shadow-lg">
-  <h1 class="text-xl sm:text-2xl font-bold">📚 CheckMate v2</h1>
+  <h1 class="text-xl sm:text-2xl font-bold">CheckMate v2</h1>
   <p class="text-blue-100 dark:text-blue-200">教材・持ち物をまとめて管理！</p>
   
   <!-- ダークモード切り替えボタン -->
