EAN-13のバーコードに絞り込み動作を改善

--- a/index.html
+++ b/index.html
@@ -567,7 +567,10 @@ let checkSelectedDeviceId = undefined;
 let scanControls = null;
 let checkScanControls = null;
 
-ZXingBrowser.BrowserMultiFormatReader.listVideoInputDevices()
+const hints = new Map();
+hints.set(window.ZXing.DecodeHintType.POSSIBLE_FORMATS, [window.ZXing.BarcodeFormat.EAN_13]);
+hints.set(window.ZXing.DecodeHintType.TRY_HARDER, false);
+ZXingBrowser.BrowserMultiFormatReader.listVideoInputDevices(hints)
   .then((videoInputDevices) => {
     if (videoInputDevices.length > 0) {
       // 複数のカメラがある場合、ここでユーザーに選択させることも可能
