--- a/index.html
+++ b/index.html
@@ -705,40 +705,26 @@ function processVideo(videoElement, canvasElement, animationFrameHolder) {
 }
 
 async function startScanning() {
-    console.log('startScanning called');
-    if (isScanning) {
-        console.log('startScanning: already scanning, returning');
-        return;
-    }
+    if (isScanning) return;
     isScanning = true;
-    console.log('startScanning: isScanning set to true');
-
     scanBtn.disabled = true;
     stopBtn.disabled = false;
     statusMessage.textContent = '🎥 カメラを起動中...';
 
     try {
-        scanControls = await codeReader.decodeFromVideoDevice(selectedDeviceId, 'video', (result, err) => {
-            if (result) {
-                console.log('startScanning: barcode detected', result);
-                onDetected(result);
+        const constraints = {
+            video: {
+                width: { ideal: 818 },
+                height: { ideal: 460 },
+                deviceId: selectedDeviceId ? { exact: selectedDeviceId } : undefined,
+                facingMode: !selectedDeviceId ? 'environment' : undefined
             }
-            if (err) {
-                // バーコードが見つからない場合は正常な動作なので無視
-                if (err.message?.includes('No MultiFormat Readers') ||
-                    err.name?.includes('NotFoundException') ||
-                    err.message?.includes('NotFoundException')) {
-                    return; // 無視して続行
-                }
-
-                // その他の実際のエラーの場合のみ処理を停止
-                console.error('startScanning: decode error', err);
-                statusMessage.textContent = `❌ エラー: ${err.message}`;
-                stopScanning();
-            }
-        });
-        console.log('startScanning: ZXing decoding started');
+        };
+        const stream = await navigator.mediaDevices.getUserMedia(constraints);
+        video.srcObject = stream;
+        await video.play();
         statusMessage.textContent = '📷 スキャン中...';
+        animationFrameId = requestAnimationFrame(scanLoop);
     } catch (err) {
         console.error('startScanning: catch error', err);
         statusMessage.textContent = `❌ カメラの起動に失敗しました: ${err.message}`;
@@ -748,58 +734,75 @@ async function startScanning() {
     }
 }
 
-function stopScanning() {
-    console.log('stopScanning called');
-    if (scanControls) {
-        scanControls.stop();
-        scanControls = null;
-        console.log('stopScanning: scanControls.stop() called');
-    }
-    console.log('stopScanning: codeReader reset');
+function scanLoop() {
+    if (!isScanning) return;
 
+    if (video.readyState === video.HAVE_ENOUGH_DATA) {
+        canvas.height = video.videoHeight;
+        canvas.width = video.videoWidth;
+        const ctx = canvas.getContext('2d', { willReadFrequently: true });
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        
+        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        const data = imageData.data;
+        for (let i = 0; i < data.length; i += 4) {
+            const avg = data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114;
+            data[i] = avg;
+            data[i + 1] = avg;
+            data[i + 2] = avg;
+        }
+        ctx.putImageData(imageData, 0, 0);
+
+        try {
+            const result = codeReader.decodeFromCanvas(canvas);
+            if (result) {
+                onDetected(result);
+            }
+        } catch (err) {
+            if (!(err instanceof ZXing.NotFoundException)) {
+                console.error('Scan error:', err);
+            }
+        }
+    }
+    animationFrameId = requestAnimationFrame(scanLoop);
+}
+
+function stopScanning() {
+    if (animationFrameId) {
+        cancelAnimationFrame(animationFrameId);
+        animationFrameId = null;
+    }
+    if (video.srcObject) {
+        video.srcObject.getTracks().forEach(track => track.stop());
+        video.srcObject = null;
+    }
     isScanning = false;
-    console.log('stopScanning: isScanning set to false');
-    
     statusMessage.textContent = '📷 準備完了 - スキャン開始ボタンを押してください';
     scanBtn.disabled = false;
     stopBtn.disabled = true;
 }
 
 async function startCheckScanning() {
-    console.log('startCheckScanning called');
-    if (isCheckScanning) {
-        console.log('startCheckScanning: already scanning, returning');
-        return;
-    }
+    if (isCheckScanning) return;
     isCheckScanning = true;
-    console.log('startCheckScanning: isCheckScanning set to true');
-
     checkScanBtn.disabled = true;
     checkStopBtn.disabled = false;
     checkStatusMessage.textContent = '🎥 カメラを起動中...';
 
     try {
-        checkScanControls = await codeReader.decodeFromVideoDevice(checkSelectedDeviceId, 'check-video', (result, err) => {
-            if (result) {
-                console.log('startCheckScanning: barcode detected', result);
-                onCheckDetected(result);
+        const constraints = {
+            video: {
+                width: { ideal: 818 },
+                height: { ideal: 460 },
+                deviceId: checkSelectedDeviceId ? { exact: checkSelectedDeviceId } : undefined,
+                facingMode: !checkSelectedDeviceId ? 'environment' : undefined
             }
-            if (err) {
-                // バーコードが見つからない場合は正常な動作なので無視
-                if (err.message?.includes('No MultiFormat Readers') ||
-                    err.name?.includes('NotFoundException') ||
-                    err.message?.includes('NotFoundException')) {
-                    return; // 無視して続行
-                }
-
-                // その他の実際のエラーの場合のみ処理を停止
-                console.error('startScanning: decode error', err);
-                statusMessage.textContent = `❌ エラー: ${err.message}`;
-                stopScanning();
-            }
-        });
-        console.log('startCheckScanning: ZXing decoding started');
+        };
+        const stream = await navigator.mediaDevices.getUserMedia(constraints);
+        checkVideo.srcObject = stream;
+        await checkVideo.play();
         checkStatusMessage.textContent = '📷 スキャン中...';
+        checkAnimationFrameId = requestAnimationFrame(checkScanLoop);
     } catch (err) {
         console.error('startCheckScanning: catch error', err);
         checkStatusMessage.textContent = `❌ カメラの起動に失敗しました: ${err.message}`;
@@ -809,18 +812,49 @@ async function startCheckScanning() {
     }
 }
 
-function stopCheckScanning() {
-    console.log('stopCheckScanning called');
-    if (checkScanControls) {
-        checkScanControls.stop();
-        checkScanControls = null;
-        console.log('stopCheckScanning: checkScanControls.stop() called');
+function checkScanLoop() {
+    if (!isCheckScanning) return;
+
+    if (checkVideo.readyState === checkVideo.HAVE_ENOUGH_DATA) {
+        checkCanvas.height = checkVideo.videoHeight;
+        checkCanvas.width = checkVideo.videoWidth;
+        const ctx = checkCanvas.getContext('2d', { willReadFrequently: true });
+        ctx.drawImage(checkVideo, 0, 0, checkCanvas.width, checkCanvas.height);
+
+        const imageData = ctx.getImageData(0, 0, checkCanvas.width, checkCanvas.height);
+        const data = imageData.data;
+        for (let i = 0; i < data.length; i += 4) {
+            const avg = data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114;
+            data[i] = avg;
+            data[i + 1] = avg;
+            data[i + 2] = avg;
+        }
+        ctx.putImageData(imageData, 0, 0);
+
+        try {
+            const result = codeReader.decodeFromCanvas(checkCanvas);
+            if (result) {
+                onCheckDetected(result);
+            }
+        } catch (err) {
+            if (!(err instanceof ZXing.NotFoundException)) {
+                console.error('Check scan error:', err);
+            }
+        }
     }
-    console.log('stopCheckScanning: codeReader reset');
+    checkAnimationFrameId = requestAnimationFrame(checkScanLoop);
+}
 
+function stopCheckScanning() {
+    if (checkAnimationFrameId) {
+        cancelAnimationFrame(checkAnimationFrameId);
+        checkAnimationFrameId = null;
+    }
+    if (checkVideo.srcObject) {
+        checkVideo.srcObject.getTracks().forEach(track => track.stop());
+        checkVideo.srcObject = null;
+    }
     isCheckScanning = false;
-    console.log('stopCheckScanning: isCheckScanning set to false');
-
     checkStatusMessage.textContent = '📷 バーコードを読み取って自動チェック';
     checkScanBtn.disabled = false;
     checkStopBtn.disabled = true;
